--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,5 +10,6 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.6), ggplot2, data.table, GenomicRanges
 Imports:
-  cowplot
+  cowplot,
+  seqsetvis
 RoxygenNote: 7.2.0
